deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-lens-service
  namespace: ichiban
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      name: http
      protocol: TCP
  selector:
    app: portfolio-lens-service
    component: ichiban
